--- a/organizer-dashboard.html
+++ b/organizer-dashboard.html
@@ -54,7 +54,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link eventhub-nav-link" href="events.html">
+                        <a class="nav-link eventhub-nav-link" href="event-listing.html">
                             <i class="bi bi-calendar-event me-1"></i>Browse Events
                         </a>
                     </li>
