--- a/create-event.html
+++ b/create-event.html
@@ -51,7 +51,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link eventhub-nav-link" href="events.html">
+                        <a class="nav-link eventhub-nav-link" href="event-listing.html">
                             <i class="bi bi-calendar-event me-1"></i>Browse Events
                         </a>
                     </li>
